--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-runtime": "^6.11.6",
     "koa": "^1.2.4",
+    "koa-mount-html": "^0.1.2",
     "koa-request": "^1.0.0",
-    "koa-router": "^5.4.0"
+    "koa-router": "^5.4.0",
+    "koa-static": "^2.0.0"
   }
 }
